Fix other whitespace issue brought up in #406

--- a/test/less/whitespace.less
+++ b/test/less/whitespace.less
@@ -39,4 +39,6 @@
 .newline_ws	.tab_ws	{
 color:
 white;
+background-position: 45
+-23;
 }
